@@ -1,3 +1,7 @@
+2014-01-20  Torbjorn Granlund  <tege@gmplib.org>
+
+	* demos/expr: Get rid of varargs code and references.
+
 2014-01-19  Torbjorn Granlund  <tege@gmplib.org>
 
 	* config.guess: Add new AMD CPUs (piledriver, steamroller, excavator,
